--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQL8Dialect
+logging:
+  level:
+    com.eucl.prepaidtokensystem: DEBUG
+    org.springframework: WARN
+    org.hibernate: WARN
+jwt:
+  secret: jfWAXQzHo/8yDt5JnP9SwZkFmSgOsuUKS/WCK2LWU3c=
+  expiration-ms: 900000 # 1 hour
